--- a/Dokumentacja/dokumentacjaProjektu/dokumentacjaTermometr.tex
+++ b/Dokumentacja/dokumentacjaProjektu/dokumentacjaTermometr.tex
@@ -47,7 +47,7 @@ Każda próba komunikacji urządzeń master i slave musi zacząć się od sekwen
 \includegraphics[scale=0.4]{graphics/init.png}
 \end{center}
 \label{inititming}
-\caption{Diagram czasu dla procedury inicjalizacji}
+\caption{Diagram czasowy dla procedury inicjalizacji}
 \end{figure}
 
 \subsection{Zapis i odczyt}
@@ -64,7 +64,7 @@ Odczyt bitu również wymaga 60$\mu$s slotu oraz 1$\mu$s przerwy. Odczyt rozpocz
 \includegraphics[scale=0.5]{graphics/slots.png}
 \end{center}
 \label{slotsitming}
-\caption{Diagramy czasow dla procedury zapisu i odczytu}
+\caption{Diagramy czasowy dla procedury zapisu i odczytu}
 \end{figure}
 
 \section{Implementacja podstawowych operacji}
